2011-08-04  Jan Djärv  <jan.h.d@swipnet.se>

	* configure.in (HAVE_PTHREAD): Add check for -lpthread (Bug#9216).
	(HAVE_GTK_AND_PTHREAD): Remove.

2011-07-28  Alp Aker  <alp.tekin.aker@gmail.com>

	* configure.in (HAVE_RSVG): Allow use of -lrsvg-2 for any NextStep
	build, not just GNUstep (Bug#9177).

2011-07-28  Paul Eggert  <eggert@cs.ucla.edu>

	Assume freestanding C89 headers, string.h, stdlib.h.
	Again, this simplifies the code, and all current platforms have these.
	* configure.in (AC_CHECK_HEADERS): Don't check for limits.h.
	(AC_HEADER_STDC): Remove.
	(AC_CHECK_FUNCS): No need to check for strchr, strrchr.
	(strchr, strrchr): Remove fallback macros.

	Assume support for memcmp, memcpy, memmove, memset.
	This simplifies the code a bit.  All current platforms have these,
	as they are required for C89.  If this turns into a problem we
	can add the gnulib modules for these (a 1-line change to Makefile.in).
	* configure.in: Don't check for memcmp, memcpy, memmove, memset.

2011-07-27  Paul Eggert  <eggert@cs.ucla.edu>

	* GNUmakefile: New file.
	This is for convenience, so that one can run GNU make in an
	unconfigured source tree, and get a default build.

2011-07-13  Jan Djärv  <jan.h.d@swipnet.se>

	* configure.in (GSETTINGS): Check for gio-2.0 >= 2.26.

2011-07-11  YAMAMOTO Mitsuharu  <mituharu@math.s.chiba-u.ac.jp>

	* configure.in (LD_SWITCH_SYSTEM_TEMACS): Add -fno-pie on Darwin
	so as to suppress address randomization (Bug#8395).

2011-07-09  Paul Eggert  <eggert@cs.ucla.edu>

	* lib/stdint.in.h: Merge from gnulib (Bug#9025).
	This fixes a build problem on older Mac OS X hosts.

	* m4/pthread_sigmask.m4 (gl_FUNC_PTHREAD_SIGMASK): Omit gl_THREADLIB
	test, which runs afoul of Automake installations where, for example,
	/usr/share/aclocal contains a copy of gl_THREADLIB.
	Problem reported by Sven Joachim in
	<http://lists.gnu.org/archive/html/emacs-devel/2011-07/msg00529.html>.
	This is just a quick temporary fix, specific to Emacs; I'll work